--- a/assets/l10n/en.json
+++ b/assets/l10n/en.json
@@ -16,5 +16,10 @@
   "Failed to sign in": "Failed to sign in",
   "Full Name": "Full Name",
   "Repeat Password": "Repeat Password",
-  "create an account for free": "create an account for free"
+  "create a new account": "create a new account",
+  "Account Created": "Account Created",
+  "Resend Verification Email": "Resend Verification Email",
+  "Verification Email Sent": "Verification Email Sent",
+  "We have sent an email with a confirmation link to your email address. In order to complete the sign-up process, please click the confirmation link.": "We have sent an email with a confirmation link to your email address. In order to complete the sign-up process, please click the confirmation link.",
+  "If you do not receive a confirmation email, please check your spam folder. Also, please verify that you entered a valid email address in our sign-up form.": "If you do not receive a confirmation email, please check your spam folder. Also, please verify that you entered a valid email address in our sign-up form."
 }
