--- a/assets/l10n/en.json
+++ b/assets/l10n/en.json
@@ -21,7 +21,7 @@
   "Resend Verification Email": "Resend Verification Email",
   "Verification Email Sent": "Verification Email Sent",
   "We have sent an email with a confirmation link to your email address. In order to complete the sign-up process, please click the confirmation link.": "We have sent an email with a confirmation link to your email address. In order to complete the sign-up process, please click the confirmation link.",
-  "If you do not receive a confirmation email, please check your spam folder. Also, please verify that you entered a valid email address in our sign-up form.": "If you do not receive a confirmation email, please check your spam folder. Also, please verify that you entered a valid email address in our sign-up form.",
+  "If you do not receive a confirmation email, please check your spam folder. Also, please verify that you entered a valid email address:": "If you do not receive a confirmation email, please check your spam folder. Also, please verify that you entered a valid email address:",
   "Passwords don't match!": "Passwords don't match!",
   "This email is already in use!": "This email is already in use!",
   "Failed to sign up": "Failed to sign up",
