--- a/assets/l10n/cs.json
+++ b/assets/l10n/cs.json
@@ -20,10 +20,25 @@
   "Account Created": "Účet vytvořen",
   "Resend Verification Email": "Poslat znovu aktivační email",
   "Verification Email Sent": "Aktivační email poslán",
-  "We have sent an email with a confirmation link to your email address. In order to complete the sign-up process, please click the confirmation link.": "Na uvedenou e-mailovou adresu jsme Vám poslali zprávu s aktivačním odkazem. Pro dokončení registrace klikněte na tento odkaz.",
-  "If you do not receive a confirmation email, please check your spam folder. Also, please verify that you entered a valid email address:": "Pokud neobdržíte potvrzovací e-mail, zkontrolujte prosím složku se spamem. Ověřte také, že jste v registračním formuláři zadali platnou e-mailovou adresu:",
+  "We have sent an email with a confirmation link to your email address. In order to complete the sign-up process, please click the confirmation link.": "Na uvedenou emailovou adresu jsme Vám poslali zprávu s aktivačním odkazem. Pro dokončení registrace klikněte na tento odkaz.",
+  "If you do not receive a confirmation email, please check your spam folder. Also, please verify that you entered a valid email address:": "Pokud neobdržíte potvrzovací email, zkontrolujte prosím složku se spamem. Ověřte také, že jste v registračním formuláři zadali platnou emailovou adresu:",
   "Passwords don't match!": "Hesla se neshodují!",
   "This email is already in use!": "Tento email se již používá!",
   "Failed to sign up": "Neúspěšná registrace",
-  "Password must contain 6 to 20 characters with at least one digit and character!": "Heslo musí obsahovat 6 až 20 znaků s nejméně jedním číslem a písmenem!"
+  "Password must contain 6 to 20 characters with at least one digit and character!": "Heslo musí obsahovat 6 až 20 znaků s nejméně jedním číslem a písmenem!",
+  "Reset Password": "Resetovat Heslo",
+  "Enter the email associated with your account and we'll send an email with instructions to reset your password.": "Zadejte email vašeho účtu a my vám pošleme e-mail s pokyny k obnovení hesla.",
+  "Send Instructions": "Poslat Pokyny",
+  "Check your mail": "Email byl odeslán",
+  "We have sent password recover instructions to your email.": "Na váš email jsme zaslali pokyny pro obnovení hesla.",
+  "If you do not receive the email, please check your spam folder or ": "Pokud neobdržíte email, zkontrolujte prosím složku se spamem nebo ",
+  "try another email address.": "zkuste jinou emailovou addresu.",
+  "Link Accounts": "Propojit Účty",
+  "Continue": "Pokračovat",
+  "You've already used": "Účet s emailovou adresou",
+  "in the past. Please sign in with that account to continue:": "již existuje. K pokračování se přihlašte na tento účet:",
+  "Failed to link accounts": "Propojení účtů selhalo",
+  "Account emails don't match!\nPlease sign in to: ": "Emailové adresy se neshodují!\nProsím přihlašte se na: ",
+  "Continue with Facebook": "Pokračovat přes Facebook",
+  "Continue with Google": "Pokračovat přes Google"
 }
