--- a/assets/l10n/cs.json
+++ b/assets/l10n/cs.json
@@ -21,9 +21,9 @@
   "Resend Verification Email": "Poslat znovu aktivační email",
   "Verification Email Sent": "Aktivační email poslán",
   "We have sent an email with a confirmation link to your email address. In order to complete the sign-up process, please click the confirmation link.": "Na uvedenou emailovou adresu jsme Vám poslali zprávu s aktivačním odkazem. Pro dokončení registrace klikněte na tento odkaz.",
-  "If you do not receive a confirmation email, please check your spam folder. Also, please verify that you entered a valid email address:": "Pokud neobdržíte potvrzovací email, zkontrolujte prosím složku se spamem. Ověřte také, že jste v registračním formuláři zadali platnou emailovou adresu:",
+  "If you do not receive a confirmation email, please check your spam folder. Also, please verify that you entered a valid email address:": "Pokud neobdržíte potvrzovací email, zkontrolujte prosím složku se spamem. Ověřte také, že v registračním formuláři byla zadána platná emailová adresa:",
   "Passwords don't match!": "Hesla se neshodují!",
-  "This email is already in use!": "Tento email se již používá!",
+  "This email is already in use!": "Tento email je již obsazený!",
   "Failed to sign up": "Neúspěšná registrace",
   "Password must contain 6 to 20 characters with at least one digit and character!": "Heslo musí obsahovat 6 až 20 znaků s nejméně jedním číslem a písmenem!",
   "Reset Password": "Resetovat Heslo",
@@ -40,5 +40,106 @@
   "Failed to link accounts": "Propojení účtů selhalo",
   "Account emails don't match!\nPlease sign in to: ": "Emailové adresy se neshodují!\nProsím přihlašte se na: ",
   "Continue with Facebook": "Pokračovat přes Facebook",
-  "Continue with Google": "Pokračovat přes Google"
+  "Continue with Google": "Pokračovat přes Google",
+  "Password reset failed": "Neúspěšné resetování hesla",
+  "Email not verified": "Emailová adresa neověřena",
+  "Please verify your email before you continue!": "K pokračování ověřte svoji emailovou adresu!",
+  "Hello": "Dobrý den",
+  "Are you ready to learn new techniques?": "Jaké techniky se dnes chcete naučit?",
+  "Categories": "Kategorie",
+  "View all": "Zobrazit vše",
+  "What's new?": "Co je nového?",
+  "Explore": "Objevujte",
+  "Unavailable": "Nedostupné",
+  "Free": "Zdarma",
+  "Beginner": "Lehký",
+  "Intermediate": "Střední",
+  "Advanced": "Těžký",
+  "Your favorites": "Vaše oblíbené",
+  "My Techniques": "Mé Techniky",
+  "My techniques": "Mé techniky",
+  "Home": "Domů",
+  "Downloaded": "Stažené",
+  "Favorites": "Oblíbené",
+  "Select a category": "Zvolte kategorii",
+  "All Techniques": "Všechny techniky",
+  "View all techniques": "Prozkoumejte všechny techniky",
+  "Text": "Text",
+  "More": "Více",
+  "Difficulty": "Obžtížnost",
+  "Description": "Popis",
+  "Detail": "Doprovodný text",
+  "Favorite": "Oblíbené",
+  "Delete": "Smazat",
+  "Download": "Stáhnout",
+  "Downloading...": "Stahování...",
+  "Account": "Účet",
+  "Account settings": "Nastavení účtu",
+  "Sign out": "Odhlásit se",
+  "Coming soon!": "Již brzy!",
+  "Unlock now": "Odemknout",
+  "Price": "Cena",
+  "Admin": "Správce",
+  "Create technique": "Vytvořit techniku",
+  "Create category": "Vytvořit kategorii",
+  "View techniques": "Zobrazit techniky",
+  "Visible categories": "Viditelné kategrie",
+  "Hidden categories": "Skryté kategorie",
+  "Create Technique": "Vytvořit techniku",
+  "Create a new technique": "Vytvořte novou techniku",
+  "Paid:": "Placená:",
+  "User has to pay for access to this technique.": "K získání přístupu musí uživatelé zaplatit finanční částku.",
+  "Category": "Kategorie",
+  "Product ID": "ID produktu",
+  "Upload files:": "Nahrání souborů:",
+  "Upload additional files to improve the user experience.": "Nahráním souborů zlepšíte celkový uživatelský zážitek.",
+  "Localization:": "Lokalizace:",
+  "Translate your content into different languages.": "Přeložte obsah do více jazykových verzí.",
+  "English": "Angličtina",
+  "Czech": "Čeština",
+  "Add": "Přidat",
+  "Create": "Vytvořit",
+  "Create Category": "Vytvořit kategorii",
+  "Create a new category to group techniques": "Vytvořte kategorii ke sdružování technik",
+  "Visibility:": "Viditelnost:",
+  "The category and its content will be visible to the public if set.": "Kategorie a veškerý její obsah bude viditelný koncovým uživatelům.",
+  "Choose Files": "Nahrání souborů",
+  "Choose files to upload": "Vyberte soubory k nahrání",
+  "Choose Thumbnail": "Vybrat obrázek",
+  "Choose Video": "Vybrat video",
+  "Done": "Potvrdit",
+  "Title": "Název",
+  "Accompanying text": "Doprovodný text",
+  "Save": "Uložit",
+  "Remove": "Odebrat",
+  "Edit Localization": "Upravit lokalizaci",
+  "Add Localization": "Vytvořit lokalizaci",
+  "Edit localized data for": "Upravte lokalizaci pro",
+  "Add localized data to your category": "Vytvořte lokalizovaný obsah pro kategorii",
+  "Add localized data to your technique": "Vytvořte lokalizovaný obsah pro techniku",
+  "Failed to create technique": "Vytvoření techniky selhalo",
+  "Browse Techniques": "Prozkoumat techniky",
+  "Visible Categories": "Viditelné kategorie",
+  "Hidden Categories": "Skryté kategorie",
+  "Here you can browse through techniques and manage their content.": "Zde můžete prozkoumat a spravovat obsah jednotlivých technik.",
+  "Here you can browse through visible categories. Users can see these categories and their content in their app.": "Zde můžete prozkoumata obsahy viditelných kategorií. Pro koncové uživatele jsou viditelné kategorie včetně jejich obsahu přístupné.",
+  "Here you can browse through hidden categories and prepare new techniques for future release. Users are not able see these categories and their content.": "Zde můžete prozkoumat skryté techniky a přidávat obsah pro budoucí publikaci. Pro koncové uživatele jsou skryté kategorie včetně jejich obsahu nepřístupné.",
+  "items": "položky",
+  "No categories": "Žádné kategorie",
+  "No techniques": "Žádné techniky",
+  "Edit Category": "Upravit kategorii",
+  "Edit Technique": "Upravit techniku",
+  "Edit details of your category": "Upravte detaily kategorie",
+  "Edit details of your technique": "Upravte detaily techniky",
+  "Purchase Failed": "Selhání nákupu",
+  "No internet connection!": "Žádné připojení k internetu!",
+  "No connection": "Žádné připojení",
+  "Email not found!": "Email nenalezen!",
+  "Language not supported!": "Tento jazyk není podporován!",
+  "Media was not found!": "Médium nenalezeno!",
+  "Sorry, the product is not available at the moment!": "Tento produkt není momentálně k dispozici!",
+  "Purchase has failed, please try again!": "Nákup skončil neúspěšně, zkuste to znovu!",
+  "User doesn't exist!": "Tento uživatel neexistuje!",
+  "No logged in user found!": "Žádný přihlášený uživatel nebyl nalezen!",
+  "User account is not verified!": "Účet není ověřený!"
 }
