--- a/assets/l10n/en.json
+++ b/assets/l10n/en.json
@@ -40,5 +40,106 @@
   "Failed to link accounts": "Failed to link accounts",
   "Account emails don't match!\nPlease sign in to: ": "Account emails don't match!\nPlease sign in to: ",
   "Continue with Facebook": "Continue with Facebook",
-  "Continue with Google": "Continue with Google"
+  "Continue with Google": "Continue with Google",
+  "Password reset failed": "Password reset failed",
+  "Email not verified": "Email not verified",
+  "Please verify your email before you continue!": "Please verify your email before you continue!",
+  "Hello": "Hello",
+  "Are you ready to learn new techniques?": "Are you ready to learn new techniques?",
+  "Categories": "Categories",
+  "View all": "View all",
+  "What's new?": "What's new?",
+  "Explore": "Explore",
+  "Unavailable": "Unavailable",
+  "Free": "Free",
+  "Beginner": "Beginner",
+  "Intermediate": "Intermediate",
+  "Advanced": "Advanced",
+  "Your favorites": "Your favorites",
+  "My Techniques": "My Techniques",
+  "My techniques": "My techniques",
+  "Home": "Home",
+  "Downloaded": "Downloaded",
+  "Favorites": "Favorites",
+  "Select a category": "Select a category",
+  "All Techniques": "All Techniques",
+  "View all techniques": "View all techniques",
+  "Text": "Text",
+  "More": "More",
+  "Difficulty": "Difficulty",
+  "Description": "Description",
+  "Detail": "Detail",
+  "Favorite": "Favorite",
+  "Delete": "Delete",
+  "Download": "Download",
+  "Downloading...": "Downloading...",
+  "Account": "Account",
+  "Account settings": "Account settings",
+  "Sign out": "Sign out",
+  "Coming soon!": "Coming soon!",
+  "Unlock now": "Unlock now",
+  "Price": "Price",
+  "Admin": "Admin",
+  "Create technique": "Create technique",
+  "Create category": "Create category",
+  "View techniques": "View techniques",
+  "Visible categories": "Visible categories",
+  "Hidden categories": "Hidden categories",
+  "Create Technique": "Create Technique",
+  "Create a new technique": "Create a new technique",
+  "Paid:": "Paid:",
+  "User has to pay for access to this technique.": "User has to pay for access to this technique.",
+  "Category": "Category",
+  "Product ID": "Product ID",
+  "Upload files:": "Upload files:",
+  "Upload additional files to improve the user experience.": "Upload additional files to improve the user experience.",
+  "Localization:": "Localization:",
+  "Translate your content into different languages.": "Translate your content into different languages.",
+  "English": "English",
+  "Czech": "Czech",
+  "Add": "Add",
+  "Create": "Create",
+  "Create Category": "Create Category",
+  "Create a new category to group techniques": "Create a new category to group techniques",
+  "Visibility:": "Visibility:",
+  "The category and its content will be visible to the public if set.": "The category and its content will be visible to the public if set.",
+  "Choose Files": "Choose Files",
+  "Choose files to upload": "Choose files to upload",
+  "Choose Thumbnail": "Choose Thumbnail",
+  "Choose Video": "Choose Video",
+  "Done": "Done",
+  "Title": "Title",
+  "Accompanying text": "Accompanying text",
+  "Save": "Save",
+  "Remove": "Remove",
+  "Edit Localization": "Edit Localization",
+  "Add Localization": "Add Localization",
+  "Edit localized data for": "Edit localized data for",
+  "Add localized data to your category": "Add localized data to your category",
+  "Add localized data to your technique": "Add localized data to your technique",
+  "Failed to create technique": "Failed to create technique",
+  "Browse Techniques": "Browse Techniques",
+  "Visible Categories": "Visible Categories",
+  "Hidden Categories": "Hidden Categories",
+  "Here you can browse through techniques and manage their content.": "Here you can browse through techniques and manage their content.",
+  "Here you can browse through visible categories. Users can see these categories and their content in their app.": "Here you can browse through visible categories. Users can see these categories and their content in their app.",
+  "Here you can browse through hidden categories and prepare new techniques for future release. Users are not able see these categories and their content.": "Here you can browse through hidden categories and prepare new techniques for future release. Users are not able see these categories and their content.",
+  "items": "items",
+  "No categories": "No categories",
+  "No techniques": "No techniques",
+  "Edit Category": "Edit Category",
+  "Edit Technique": "Edit technique",
+  "Edit details of your category": "Edit details of your category",
+  "Edit details of your technique": "Edit details of your technique",
+  "Purchase Failed": "Purchase Failed",
+  "No internet connection!": "No internet connection!",
+  "No connection": "No connection",
+  "Email not found!": "Email not found!",
+  "Language not supported!": "Language not supported!",
+  "Media was not found!": "Media was not found!",
+  "Sorry, the product is not available at the moment!": "Sorry, the product is not available at the moment!",
+  "Purchase has failed, please try again!": "Purchase has failed, please try again!",
+  "User doesn't exist!": "User doesn't exist!",
+  "No logged in user found!": "No logged in user found!",
+  "User account is not verified!": "User account is not verified!"
 }
