Add user DTO tests

--- a/assets/l10n/cs.json
+++ b/assets/l10n/cs.json
@@ -83,7 +83,7 @@
   "Create technique": "Vytvořit techniku",
   "Create category": "Vytvořit kategorii",
   "View techniques": "Zobrazit techniky",
-  "Visible categories": "Viditelné kategrie",
+  "Visible categories": "Viditelné kategorie",
   "Hidden categories": "Skryté kategorie",
   "Create Technique": "Vytvořit techniku",
   "Create a new technique": "Vytvořte novou techniku",
